# softballratings

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: daily.yml
data/: ratings.csv  ratings_prev.csv
docs/: index.html
notebooks/: explore.ipynb
softballratings/: eval.py  rate.py  ratings.py  scrape.py  web.py
